--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
       </div>
       <br>
       <div class="contact-info">
-        <span class="contact-items">Email</span>
-        <span class="contact-items">Phone</span>
-        <span class="contact-items">LinkedIn</span>
-        <span class="contact-items">GitHub</span>
+        <div class="email contact-items"><span>Email</span><span class="email-to">boughton.william@gmail.com</span></div>
+        <div class="phone contact-items"><span>Phone</span><span>925-413-4156</span></div>
+        <div class="linked contact-items"><span>LinkedIn</span><span>/in/billboughton</span></div>
+        <div class="git contact-items"><span>GitHub</span><span>/BBoughton84</span></div>
       </div>
     </header>
 
@@ -25,23 +25,47 @@
 
     <main>
       <section class="about-me">
-        Hello world, This is my about me section
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </section>
       <section class="showcase">
         <div class="first-row">
-          <div class="project-1">
+          <div class="project-1 each">
             <img src="http://placehold.it/350x250">
+            <div class="">
+              This is Project 1
+            </div>
+            <div class="">
+              Link to youtube/github
+            </div>
           </div>
-          <div class="project-2">
+          <div class="project-2 each ">
             <img src="http://placehold.it/350x250">
+            <div class="">
+              This is project 2
+            </div>
+            <div class="">
+              Link to youtube/github
+            </div>
           </div>
         </div>
         <div class="second-row">
-          <div class="project-3">
+          <div class="project-3 each ">
             <img src="http://placehold.it/350x250">
+            <div class="">
+              This is project 3
+            </div>
+            <div class="">
+              Link to youtube/github
+            </div>
           </div>
-          <div class="project-4">
+          <div class="project-4 each ">
             <img src="http://placehold.it/350x250">
+            <div class="">
+              This is project 4
+            </div>
+            <div class="">
+              Link to youtube/github
+            </div>
           </div>
         </div>
       </section>
