--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
               Link to youtube/github
             </div>
           </div>
-          <div class="project-2 each ">
+          <div class="project-2 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              This is project 2
+              CarChat
             </div>
             <div class="">
               Link to youtube/github
@@ -49,19 +49,19 @@
           </div>
         </div>
         <div class="second-row">
-          <div class="project-3 each ">
+          <div class="project-3 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              This is project 3
+              Get Me Safe
             </div>
             <div class="">
               Link to youtube/github
             </div>
           </div>
-          <div class="project-4 each ">
+          <div class="project-4 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              This is project 4
+              Find More Money Helper
             </div>
             <div class="">
               Link to youtube/github
