small changes on portfolio

--- a/index.html
+++ b/index.html
@@ -32,19 +32,27 @@
           <div class="project-1 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              This is Project 1
+              EnviroPi
             </div>
             <div class="">
-              Link to youtube/github
+              <span>Link to youtube</span><span>Link to Github</span>
+            </div>
+            <div class="">
+              This was a IoT based project that uses a Raspberry Pi to monitor an environment and respond based on monitored inputs while logging all data to a database to be displayed in a website.
+              Tech used: Raspberry Pi, Python, Flask, SQL Alchemy, AngularJS, NodeJS, Heroku, Firebase.
             </div>
           </div>
           <div class="project-2 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              CarChat
+              GetMeSafe
             </div>
             <div class="">
-              Link to youtube/github
+              <span>Link to youtube</span><span>Link to github</span>
+            </div>
+            <div class="">
+              This website helps people who are feeling unsafe, find the nearest open location, gives them directions, while notifiying emergency contats that you are feeling unsafe and will track your location.
+              Tech used: JavaScript, Expess, Knex, Google APIs, Twillio, Authorization, MailGun
             </div>
           </div>
         </div>
@@ -52,7 +60,7 @@
           <div class="project-3 each">
             <img src="http://placehold.it/350x250">
             <div class="">
-              Get Me Safe
+              CarChat
             </div>
             <div class="">
               Link to youtube/github
